--- a/MathsQuizz.vcxproj
+++ b/MathsQuizz.vcxproj
@@ -85,9 +85,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\App.cpp" />
+    <ClCompile Include="src\Question.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="src\Question.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MathsQuizz.rc" />
