--- a/MathsQuiz.vcxproj
+++ b/MathsQuiz.vcxproj
@@ -46,13 +46,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)bin\$(Platfom)\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)bin\intermediates\$(Platfom)\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)bin$(Platfom)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)bin\intermediates$(Platfom)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)bin\$(Platfom)\$(Configuration)\</OutDir>
-    <IntDir>$(SolutionDir)bin\intermediates\$(Platfom)\$(Configuration)\</IntDir>
+    <OutDir>$(SolutionDir)bin$(Platfom)\$(Configuration)\</OutDir>
+    <IntDir>$(SolutionDir)bin\intermediates$(Platfom)\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
