--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,7 +1,8 @@
 name: MSBuild
 
-on: [push]
-
+on: 
+  workflow_dispatch:
+  
 env:
   # Path to the solution file relative to the root of the project.
   SOLUTION_FILE_PATH: .
