--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -11,7 +11,14 @@ jobs:
     - uses: DoozyX/clang-format-lint-action@v0.13
       with:
         source: './src'
-        exclude: ''
-        extensions: 'h,cpp'
+        exclude: './lib'
+        extensions: 'h,cpp,c'
         clangFormatVersion: 12
-        style: chromium
+        inplace: True
+    - uses: EndBug/add-and-commit@v4
+      with:
+        author_name: Clang Robot
+        author_email: robot@example.com
+        message: 'Committing clang-format changes'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
