--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -13,8 +13,8 @@ jobs:
         source: './src'
         exclude: './lib'
         extensions: 'h,cpp,c'
-        clangFormatVersion: 12
-        style: chromium
+        clangFormatVersion: 13
+        style: WebKit
         inplace: True
     - uses: EndBug/add-and-commit@v4
       with:
