--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -41,7 +41,8 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Premake5
-      run: ./vendor/premake5/premake gmake2
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: ./vendor/premake5/premake5-linux gmake2
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
